    Gracin).
  * bug fix: timers expiring in dead threads no longer cause a
    type-error (reported by Paul "Nonny Mouse"). 
  * bug fix: thanks to more lightweight single-stepper instrumentation, 
    code compiled with (DEBUG 3) will compile and execute significantly faster,
    and will have more accurate type-inferencing than before
  * improvements to the win32 port (thanks to Yaroslav Kavenchuk):
    * bug fix: arguments to RUN-PROGRAM are escaped correctly
    * replace dummy implementations of CL:MACHINE-INSTANCE and 
      CL:SOFTWARE-VERSION with proper version

changes in sbcl-0.9.16 relative to sbcl-0.9.15:
  * feature: implemented the READER-METHOD-CLASS and
    WRITER-METHOD-CLASS portion of the Class Initialization Protocol
    as specified by AMOP.
  * incompatible change: variable SB-EXT:*USE-IMPLEMENTATION-TYPES*
    no longer exists.
  * optimization: faster LOGCOUNT implementation on x86 and x86-64
    (thanks to Lutz Euler)
  * optimization: hashing of general arrays and vectors has been
    improved. (reported by Any Fingerhut)
  * enhancement: SB-INTROSPECT is now able to find definitions of
    profiled functions. (thanks to Troels Henriksen)
  * enhancement: compiler-macro expansion applies now to FUNCALL forms
    as well, allowing compiler-macros for SETF-functions to expand.
  * enhancement: step-instrumentation no longer wraps known
    single-value functions with multiple-value context, allowing
    better type inference.
  * fixed bug #337: use of MAKE-METHOD in method combination now works
    even in the presence of user-defined method classes.  (reported by
    Bruno Haible and Pascal Costanza)
  * fixed bug #339(c): if there are applicable methods not part of any
    long-form method-combination group, call INVALID-METHOD-ERROR.
    (reported by Bruno Haible)
  * fixed bug #361: the :FUNCTION initarg in the protocol for
    initialization of methods can now be used to override